@@ -1,2 +1,2 @@
-wanpipe_linux: git ver 063bdca
-wanpipe_common: git ver c1caf0f
+wanpipe_linux: git ver 7d928f7
+wanpipe_common: git ver 4c0d4dc
