@@ -1887,7 +1887,9 @@ static unsigned int wanpipe_poll(struct file * file, struct socket *sock, poll_t
 		DEBUG_TEST("%s: Dev stopped\n",__FUNCTION__);
 		mask |= POLLOUT | POLLWRNORM | POLLWRBAND;
 	}else{
-#if defined(LINUX_2_4)||defined(LINUX_2_6)
+#if defined SOCKWQ_ASYNC_WAITDATA
+		sk_set_bit(SOCKWQ_ASYNC_WAITDATA, sk);
+#elif defined(LINUX_2_4)||defined(LINUX_2_6)
 		set_bit(SOCK_ASYNC_NOSPACE, &sk->sk_socket->flags);
 #else
  		sk->sk_socket->flags |= SO_NOSPACE;
