@@ -1,6 +1,6 @@
 %define WANPIPE_VER	  wanpipe-util
 %define name              %{WANPIPE_VER}
-%define version           7.0.16
+%define version           7.0.17
 %define release           0
 %define	serial	 	  1
 %define UTILS_DIR 	  /usr/sbin
@@ -228,6 +228,18 @@ chmod 755 /usr/local/sbin/setup-sangoma
 
 
 %changelog
+
+* Fri Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.17
+==================================================================
+- Driver will start by default even though analog FXS/FXO module failed to configure.
+  New config parameters: RM_FAIL_ON_MOD_ERROR=YES will revert this behaviour.
+- Fake polarity feature is now configurable
+  New config parameters with their default values if not set
+  RM_FAKE_POLARITY=NO  #Default is NO.
+  RM_FAKE_POLARITY_THRESHOLD=1600
+  RM_FAKE_POLARITY_CIDTIMER=400
+  RM_FAKE_POLARITY_CIDTIMEOUT=4000
+
 
 * Mon Feb 03 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.16
 ==================================================================
